--- a/index.html
+++ b/index.html
@@ -1,7 +1,62 @@
 <!-- @include _header -->
 
-  <section>
-    <!-- Write your HTML! -->
-  </section>
-  
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="span8 offset2">
+        <div class="row-fluid">
+          <div class="pull-left">
+            <a href="#" class="unstyled-link">
+              <h1 class="logo">College Crowd</h1>
+            </a>
+          </div>
+        </div>
+        <div class="alert">
+          <strong>Interested in funding a project?</strong> Please first read our <a href="#" class="link-white">guidelines</a>.
+        </div>
+        <div class="page-header center">
+          <h1>
+            Learn2Earn
+            <br>
+            <small class="muted">An educational fundraising platform led by Raphael Menko ('12)</small>
+          </h1>
+        </div>
+        <div class="row-fluid">
+          <div class="span6">
+            <iframe width="420" height="315" src="http://www.youtube.com/embed/ohPSLp5Pk50" frameborder="0" allowfullscreen></iframe>
+            <h2>Tell me more!</h2>
+            <p>&ldquo;During our senior year at Williams we (Hayley and Raphael) took a winter study course on writing a business plan. After a few weeks of brainstorming we finally settled on the business we wanted to write about for our final project: an online Read-A-Thon. During the past year our idea has evolved quite a bit but the our fundamental, two-part mission has remained the same: to get kids reading more using 21st century tools as well as to revolutionize school fundraising so that it’s actually good for kids and is extremely profitable.&rdquo;</p>
+            <h2>What progress has been made?</h2>
+            <p>&ldquo;We (Hayley Raphael, and Greg) have been working on building and growing our business since the summer of 2012, after we graduated. We have been able to prove our concept by running a handful of events (both fundraisers and reading tracking programs) this spring, on an initial version of our site that was released in December 2012. Based on our feedback from these events, Greg, the CTO, is reprogramming the site to incorporate more gamification elements and a simpler, more intuitive design. The new version of our site was released on June 1, with a full-scale release planned for this fall, after piloting the new version with a couple of the events we are running this summer. We have worked to market our concept to schools in Southern  California, the greater Philadelphia region, New Jersey, and New York. Through this initial marketing campaign, we have already signed up over 20 schools for next year. We have not looked for funding yet, but since our business is now in a critical stage we realize that now is the time to seek outside funding.&rdquo;</p>
+            <h2>How much cash do you need?</h2>
+            <p>&ldquo;We are seeking $6000.  Hayley lives in San Diego, Raphael lives in Philadelphia, and Greg lives outside New York City.  The distance makes it difficult for us to coordinate business meetings and bounce ideas off of each other, and we end up wasting time catching each other up on new developments.&rdquo;</p>
+            <p>&ldquo;We are redesigning our site based on everything we learned from the events we ran this spring, and it would be infinitely better for the new development if we were all in the same place.  However, it will be a couple more months before our business is making enough money to allow us to move out.  While we do have schools committed for next year, our pricing structure for the early adopters is such that we do not have any revenue until after the reading fundraising events take place.&rdquo;</p>
+            <p>&ldquo;So, we need funding in order to relocate for a couple months until our business will be able to support us.  Additionally we need money to pay for a customer service team, because for each event that we run we have close to 3000 users, some of whom struggle with technology.  Given the small size of our team, we cannot commit time to answering small technical questions.&rdquo;</p>
+            <h2>Can I help without donating cash?</h2>
+            <p>&ldquo;We would really appreciate marketing guidance since we have created all of our marketing materials by hand using our limited marketing experience. We also are currently in need of legal services.&rdquo;</p>
+          </div>
+          <div class="span5 offset1">
+            <div class="well">
+              <h2><i class="icon icon-thumbs-up"></i> 0<br><small class="text-purple">Backers</small></h2>
+              <h2><i class="icon icon-money"></i> $0<br><small class="text-purple">Raised of $6,000</small></h2>
+              <h2><i class="icon icon-calendar"></i> 30<br><small class="text-purple">Days to go</small></h2>
+              <p>
+                <button class="btn btn-primary btn-block btn-large" type="submit"><i class="icon icon-thumbs-up"></i> Back This Project</button>
+                <button class="btn btn-block btn-large" type="submit">
+                  <i class="icon icon-comment"></i> Message The Team
+                  <br>
+                  <small><em>and support in any way you can!</em></small>
+                </button>
+              </p>
+              <p>Help this fundraiser by sharing this link with your networks: <span class="badge badge-success">goo.gl/TRC</span></p>
+            </div>
+            <div class="well">
+              <h2><i class="icon icon-gift"></i> What's in it for me?</h2>
+              <p>&ldquo;Anyone who donates will receive a free Learn2Earn fundraiser or reading tracking event for a school, class, or youth group (like a girl scouts troop) of their choice.  We will coordinate, organize, and run the entire event from start to finish.  Based on our previous experience a 500 person school can expect to raise $32,500 per month long fundraiser and we have reason to believe that this number will be higher in the fall with our improved crowdfunding technology.&rdquo;</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <!-- @include _footer -->
