--- a/williams/proposals/Learn2Earn_Proposal.html
+++ b/williams/proposals/Learn2Earn_Proposal.html
@@ -2,26 +2,17 @@
 
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="span8 offset2">
-        <div class="row-fluid">
-          <div class="pull-left">
-            <a href="#" class="unstyled-link">
-              <h1 class="logo">College Crowd</h1>
-            </a>
-          </div>
-        </div>
-        <div class="alert">
-          <strong>Interested in funding a project?</strong> Please first read our <a href="#" class="link-white">guidelines</a>.
-        </div>
+      <div class="span10 offset1">
+        <!-- @include banner -->
         <div class="page-header center">
           <h1>
-            Learn2Earn
+            <b>Learn2Earn:</b> An educational fundraising platform
             <br>
-            <small class="muted">An educational fundraising platform led by Raphael Menko ('12)</small>
+            <small class="muted">By Raphael Menko ('12)</small>
           </h1>
         </div>
         <div class="row-fluid">
-          <div class="span6">
+          <div class="span7">
             <iframe width="420" height="315" src="http://www.youtube.com/embed/ohPSLp5Pk50" frameborder="0" allowfullscreen></iframe>
             <h2>Tell me more!</h2>
             <p>&ldquo;During our senior year at Williams we (Hayley and Raphael) took a winter study course on writing a business plan. After a few weeks of brainstorming we finally settled on the business we wanted to write about for our final project: an online Read-A-Thon. During the past year our idea has evolved quite a bit but the our fundamental, two-part mission has remained the same: to get kids reading more using 21st century tools as well as to revolutionize school fundraising so that it’s actually good for kids and is extremely profitable.&rdquo;</p>
@@ -34,11 +25,10 @@
             <h2>Can I help without donating cash?</h2>
             <p>&ldquo;We would really appreciate marketing guidance since we have created all of our marketing materials by hand using our limited marketing experience. We also are currently in need of legal services.&rdquo;</p>
           </div>
-          <div class="span5 offset1">
+          <div class="span4 offset1">
             <div class="well">
               <h2><i class="icon icon-thumbs-up"></i> 0<br><small class="text-purple">Backers</small></h2>
               <h2><i class="icon icon-money"></i> $0<br><small class="text-purple">Raised of $6,000</small></h2>
-              <h2><i class="icon icon-calendar"></i> 30<br><small class="text-purple">Days to go</small></h2>
               <p>
                 <button class="btn btn-primary btn-block btn-large" type="submit"><i class="icon icon-thumbs-up"></i> Back This Project</button>
                 <button class="btn btn-block btn-large" type="submit">
