--- a/williams/proposals/Katherine_Arellano_Proposal.html
+++ b/williams/proposals/Katherine_Arellano_Proposal.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    
+
         <!-- Hammer reload -->
           <script>
             setInterval(function(){
@@ -16,11 +16,11 @@
                 ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
                 ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
                 ws.onmessage = function(){
-                  var links = document.getElementsByTagName('link'); 
-                    for (var i = 0; i < links.length;i++) { 
-                    var link = links[i]; 
-                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) { 
-                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,''); 
+                  var links = document.getElementsByTagName('link');
+                    for (var i = 0; i < links.length;i++) {
+                    var link = links[i];
+                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) {
+                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,'');
                       link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
                     }
                   }
@@ -29,7 +29,7 @@
             }, 1000)
           </script>
         <!-- /Hammer reload -->
-      
+
 
     <!-- Le styles -->
     <!-- <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet"> -->
@@ -54,6 +54,16 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/images/apple-touch-icon-114x114.png"> -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42502843-1', 'college-crowd.com');
+  ga('send', 'pageview');
+
+</script>
   </head>
 <body>
 
@@ -64,7 +74,7 @@
   <i class="icon icon-money icon-large"></i> <strong>Interested in funding a project?</strong> Please first read our <a href="../guidelines/Funder_Guidelines.html" class="link-white">guidelines</a>.
 </div>
 <div class="alert alert-info">
-  <i class="icon icon-info-sign icon-large"></i> College Crowd is organized by members of the Williams Alumni Community. It is <strong>not</strong> affiliated or endorsed by Williams College or its administration. 
+  <i class="icon icon-info-sign icon-large"></i> College Crowd is organized by members of the Williams Alumni Community. It is <strong>not</strong> affiliated or endorsed by Williams College or its administration.
 </div>
 <div class="header">
   <div class="header-text">
@@ -111,12 +121,12 @@
                 <h2><i class="icon icon-thumbs-up"></i> 0<br><small class="text-purple">Backers</small></h2>
                 <h2><i class="icon icon-money"></i> $0<br><small class="text-purple">Raised of $4,000</small></h2>
                 <p>
-                  <button class="btn btn-primary btn-block btn-large" type="submit"><i class="icon icon-thumbs-up"></i> Back This Project</button>
-                  <button class="btn btn-block btn-large" type="submit">
+                  <a href="#" data-project="7" class="back-track btn btn-primary btn-block btn-large"><i class="icon icon-thumbs-up"></i> Back This Project</a>
+                  <a href="#" data-project="7" class="message-track btn btn-block btn-large">
                     <i class="icon icon-comment"></i> Message The Team
                     <br>
                     <small><em>and support in any way you can!</em></small>
-                  </button>
+                  </a>
                 </p>
                 <p>Help this fundraiser by sharing this link with your networks: <span class="badge badge-success">goo.gl/TRC</span></p>
               </div>
@@ -137,5 +147,10 @@
   <!-- Le javascript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
+            <script src="../../assets/js/jquery-1.10.2.js"></script>
+  <script src="../../assets/js/happy-bootstrap.js"></script>
+  <script src="../../assets/js/happy.methods.js"></script>
+  <script src="../../assets/js/app.js"></script>
+  <script src="../../assets/js/form.js.js"></script>
 </body>
 </html>
